--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Luna Pianesi
     - name: Date of Birth
-      value: 14th March 1879
+      value: 07th December 1998
     - name: Languages
       value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD student
+      institution: Bielefeld University, Bielefeld, Germany
+      year: 2023-
       description:
         - Description 1.
         - Description 2.
@@ -31,9 +31,9 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Assistant lecturer
+      institution: Bielefeld University, Bielefeld, Germany
+      year: 2023-
       description:
         - Description 1.
         - Description 2.
